--- a/style.css
+++ b/style.css
@@ -128,10 +128,10 @@ h2{
  
   color: #D4AF37 ; 
   margin-top: 50px;
-  font-size: 1.7rem;
+  font-size: 1.9rem;
 }
 h2:hover {
   color: #ab8712;
-  text-shadow: 2px 2px 8px rgb(#075a76;);
+  text-shadow: 2px 2px 8px rgb(#075a76);
 
 }
