--- a/style.css
+++ b/style.css
@@ -1,100 +1,4 @@
-/* :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
- */
  body {
   transition: background-color 0.3s, color 0.3s;
   margin: 0;
@@ -108,8 +12,9 @@ body.dark-mode {
 
 header {
   background-color: #00a9e1;
-  padding: 20px;
+  padding: 0;
   margin: 0;
+  border:0;
   height: 90px;
   width: 100%;
   display: flex;
@@ -121,10 +26,16 @@ header {
     height: 110px;
   }
 }
+@media screen and (max-width: 400px) {
+  header h2 {
+    font-size: 1.4rem;
+    white-space: wrap;
+  }
+}
 
 header img {
   display: flex;
-  width:104px; /* Ancho de la imagen (ajusta según tus necesidades) */
+  width:104px; 
   height:74px;
   margin: 0%;
   margin-right: 4px;
@@ -132,13 +43,12 @@ header img {
  
 }
 h2{
- 
   color: #D4AF37 ; 
-  margin-top: 40px;
+  margin-top:60px;
   font-size: 1.9rem;
+  white-space: nowrap;
 }
 h2:hover {
   color: #ab8712;
-  text-shadow: 2px 2px 8px rgb(#075a76);
-
+  text-shadow: 2px 2px 8px rgb(7, 90, 118); 
 }
